# xcb__demo

./: .cvsignore  .gitignore  COPYING  Makefile.am  README  configure.ac  dpms.c  hypnomoire.c  main.c  rendertest.c  reply_formats.c  reply_formats.h  xcb-test.c  xcbdpyinfo.c  xcbrandr.c  xcbxf86dri.c  xcbxvinfo.c  xdpyinfo.c
app/xte/: .gitignore  Makefile  xte.c
neko/: .gitignore  Makefile  README  xcbneko.c  xneko.man
tests/: .gitignore  Makefile.am  flames.c  julia.c  julia.h  lissajoux.c  lissajoux.h
