AC_PREREQ(2.57)
AC_INIT([xcb-demo],0.8,[xcb@lists.freedesktop.org])
AC_CONFIG_SRCDIR([Makefile.am])
AM_INIT_AUTOMAKE([foreign dist-bzip2])
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
dnl AC_PROG_INSTALL
dnl AC_PROG_LN_S
dnl AM_PROG_LIBTOOL
dnl AC_PROG_MAKE_SET

PKG_CHECK_MODULES(XCB, xcb)
PKG_CHECK_MODULES(XCBAUX, xcb-aux)
PKG_CHECK_MODULES(XCBIMAGE, xcb-image)
PKG_CHECK_MODULES(XCBICCCM, xcb-icccm)
PKG_CHECK_MODULES(XCBDPMS, xcb-dpms)
PKG_CHECK_MODULES(XCBRENDER, xcb-render)
PKG_CHECK_MODULES(XCBRANDR, xcb-randr)
PKG_CHECK_MODULES(XCBXF86DRI, xcb-xf86dri)
PKG_CHECK_MODULES(XCBXV, xcb-xv)

AC_OUTPUT([Makefile tests/Makefile])
